# docker-sentinel

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
config/: prometheus.yml  settings.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/src/: proxy.ts
scripts/: generate_api_key.py  seed_db.py  simulate_crash.py  smoke_seed.py  smoke_seed_notifications.py
src/agent_container/: main.py  requirements.txt
src/agents/: __init__.py  _prompts.py  call_agent.py  dashboard_agent.py  email_agent.py  fix_agent.py  slack_agent.py
src/api/: app.py  deps.py  middleware.py
src/listener/: _dedup.py  _filter.py  _status.py  _tls.py  docker_monitor.py  manager.py
src/models/: __init__.py  api_key.py  base.py  crash_event.py  docker_host.py  escalation_rule.py  notification_config.py  tenant.py  user.py
src/orchestrator/: __init__.py  graph.py  nodes.py  state.py
src/schemas/: __init__.py  api_key.py  auth.py  crash_event.py  dashboard.py  docker_host.py  escalation.py  notification.py  tenant.py
src/services/: api_key_service.py  auth_cookies.py  auth_service.py  crash_event_service.py  crash_memory.py  database.py  docker_host_service.py  metrics.py  notification_service.py  oauth_client.py  redis_stream.py  (+1 more)
tests/: conftest.py
work-tracking/: PROGRESS.md
(+113 files in other folders)
