[project]
name = "docker-sentinel"
version = "0.1.0"
description = "Multi-Agent Docker Container Crash Monitor — SaaS Platform"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Redis
    "redis[hiredis]>=5.0.0",
    # Auth
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.8.0",
    "bcrypt>=4.1.0",
    # LLM / Agents
    "langgraph>=1.0.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    # Vector DB
    "qdrant-client>=1.9.0",
    "fastembed>=0.3.0",
    "langchain-qdrant>=0.2.0",
    # Docker
    "docker>=7.0.0",
    # Observability
    "prometheus-client>=0.20.0",
    "langsmith>=0.1.0",
    # Notifications
    "jinja2>=3.1.0",
    "aiosmtplib>=3.0.0",
    "twilio>=9.0.0",
    # Config
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.0",
    # WebSocket
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
